# m68k-build

./: README.md
examples/m5282lite/hello/: CMakeLists.txt  m5282evb-ram.ld  makefile
examples/m5282lite/hello/inc/: hello.h  mcf5282_clock.h  mcf5282_gpio.h  mcf5282_uart.h
examples/m5282lite/hello/src/: cf-crt0.S  cf-crt1.c  cf-isrs.c  cf-isv.S  hello.c
tools/freescale-coldfire-2011.09/i686-pc-linux-gnu/m68k-elf/lib/: cyclonemaxen2.768  cyclonemaxens.750  cycloneproen2.845  cycloneproens.812  libusb-0.1.so.4.4.4  prokernelen2.001  prokernelen2.002  usb20bdmens.584  usb20bdmrefens.584  usbmlcf20_ens.554  usbmlcf20_ref_ens.554  usbmlcf_ens.548  usbmlfs20bdmens.613
tools/freescale-coldfire-2011.09/m68k-elf/include/: cs3.h
tools/freescale-coldfire-2011.09/m68k-elf/lib/: demoem-ram-hosted.ld  demoem-rom-hosted.ld  m51ac128Aevb-33-ram-hosted.ld  m51ac128Aevb-33-rom.ld  m51ac128Aevb-50-ram-hosted.ld  m51ac128Aevb-50-ram.ld  m51ac128Aevb-50-rom.ld  m51ac128Aevb-rom-hosted.ld  m51ac128Cevb-33-ram-hosted.ld  m51ac128Cevb-33-rom-hosted.ld  m51ac128Cevb-33-rom.ld  m51ac128Cevb-50-ram-hosted.ld  m51ac128Cevb-50-rom-hosted.ld  m51ac128Cevb-50-rom.ld  m51ac128Cevb-ram-hosted.ld  m51ac128Cevb-ram.ld  m51ac128Cevb-rom-hosted.ld  m51ac256evb-50-ram.ld  m51ac256evb-50-rom-hosted.ld  m51ac256evb-50-rom.ld  m51ac256evb-ram-hosted.ld  m51ac256evb-ram.ld  m51ac256evb-rom.ld  m51qe128evb-20-ram-hosted.ld  m51qe128evb-20-rom-hosted.ld  m51qe128evb-20-rom.ld  m51qe128evb-40-ram-hosted.ld  m51qe128evb-40-ram.ld  m51qe128evb-50-ram.ld  m51qe128evb-50-rom-hosted.ld  m51qe32evb-20-rom-hosted.ld  m51qe32evb-20-rom.ld  m51qe32evb-40-rom.ld  m51qe32evb-50-ram-hosted.ld  m51qe32evb-50-ram.ld  m51qe32evb-50-rom.ld  m51qe64evb-20-ram-hosted.ld  m51qe64evb-20-rom-hosted.ld  m51qe64evb-20-rom.ld  m51qe64evb-40-ram.ld  (+83 more)
(+424 files in other folders)
